--- a/manifest.json
+++ b/manifest.json
@@ -8,13 +8,13 @@
   "icons": [
     {
       "src": "images4Estate/house 360 192x192.png",
-      "size": "192x192",
-      "type": "images/png"
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
       "src": "images4Estate/house 360 512x512.png",
-      "size": "512x512",
-      "type": "images/png"
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
