--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "description": "Ulo - Your real estate companion",
     "icons": [
         {
-            "src": "https://github.com/harry-577/Ulo/images4Estate/house 360 192x192.png",
+            "src": "https://github.com/harry-577/Ulo/blob/main/Images4Estate/house%20360%20192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
