--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
             "type": "image/png"
         },
         {
-            "src": "https://github.com/harry-577/Ulo/images4Estate/house 360 512x512.png",
+            "src": "https://github.com/harry-577/Ulo/blob/main/Images4Estate/house%20360%20512x512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any"
